MODIFY: images - Replace hosted images with local ones. - Add alt to images tages for better SEO.

--- a/html/Plan.html
+++ b/html/Plan.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/styles2.css">
     <title>Garden</title>
-    <link rel="icon" type="image/x-icon" href="./logo/Lucky-Shrub-logos/Asset 1@3x.png">
+    <link rel="icon" type="image/x-icon" href="../logo/Lucky-Shrub-logos/Asset 1@3x.png">
 </head>
 
 <body>
@@ -46,10 +46,10 @@
                         <h1 data-end="2022">New Plans for </h1>
                         <p>Give a new look to your green space with our specialy made garden accessories.</p>
                         <div class="pictures">
-                            <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1106970370612924476/ezgif.com-gif-maker_2_1.webp">
-                            <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1106976074543415356/rhs-hampton-court-palace-flower-show-secured-by-design-garden-1623328436_1.webp">
-                            <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1106976587238350959/garden-design-ideas-antique-stone-trough-ribbon-wheel-garden-by-butter-wakefield-1587235223_1.webp">
-                            <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1106976961919729775/garden-lights-lights4fun-set-of-6-solar-garden-pathway-stake-lights-ss20-29-99-1587253880_1.webp">
+                            <img class="info hidden" src="../images/plan/porcelain-paving.webp" alt="porcelain-paving">
+                            <img class="info hidden" src="../images/plan/rhs-hampton-court.webp" alt="rhs-hampton-court">
+                            <img class="info hidden" src="../images/plan/garden-design-ideas.webp" alt="garden-design-ideas">
+                            <img class="info hidden" src="../images/plan/garden-lights.webp" alt="garden-lights">
                         </div>
                     </div>
                 </div>
@@ -63,8 +63,8 @@
                     <div class="hidden">
                         <p>The lanuch of our online marketplace</p>
                         <div class="top">
-                            <img class="info-1" src="https://cdn.discordapp.com/attachments/941095160517894185/1106974664904937482/Desktop_-_2_1.webp">
-                            <img class="info-1" src="https://cdn.discordapp.com/attachments/941095160517894185/1106975437437014108/iPhone_13_Pro_1.webp">
+                            <img class="info-1" src="../images/plan/Marketplace-desktop.webp" alt="Marketplace-desktop">
+                            <img class="info-1" src="../images/plan/Marketplace-mobile.png" alt="Marketplace-mobile">
                         </div>
                     </div>
                 </div>
@@ -77,8 +77,7 @@
                     </div>
                     <div class="hidden">
                         <p>The start of constructing shops near your place</p>
-                        <img style="transition-delay: 200ms;" width="500" src="https://cdn.discordapp.com/attachments/941095160517894185/1053748312685162597/mKk3aZ3.gif">
-                        <!-- <video autoplay src="https://i.imgur.com/mKk3aZ3.gif"></video> -->
+                        <img style="transition-delay: 200ms;" width="500" src="../images/plan/workers.gif" alt="workers">
                     </div>
                 </div>
             </section>
@@ -91,7 +90,7 @@
 
                     <div class="hidden">
                         <p>Real life events in NYC, Miami, Hawai</p>
-                        <video style="transition-delay: 200ms;" width="550" height="350" controls>
+                        <video muted style="transition-delay: 200ms;" width="550" height="350" controls>
                             <source src="../images/iPhone 14 Pro _ Cinematic Short Film _ 4K ProRes Footage.mp4">
                         </video>
                     </div>
@@ -108,7 +107,7 @@
             <input class="input2" type="submit" value="Join">
         </forum>
         <div class="socials">
-            <a href="https://www.remove.bg/fr/upload" target="_blank"><img src="https://cdn.discordapp.com/attachments/941095160517894185/1051868979414700042/Twitter_Icon_Vector_PNG_Images__White_Twitter_Icon_Png__Twitter_Icons__White_Icons__Twitter_Logo_PNG_Image_For_Free_Download-removebg-preview.png" width="35px"></a>
+            <a href="https://www.linkedin.com/in/hicham-zaadla/" target="_blank"><img src="../images/twitter-icon.png" alt="twitter-icon" width="35px"></a>
         </div>
         <p>© 2022 Hicham ZAADLA. All rights reserved.</p>
     </footer>
