--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Garden</title>
-    <link rel="icon" type="image/x-icon" href="./logo/Lucky-Shrub-logos/Asset 1@3x.png">
+    <link rel="icon" type="image/x-icon" href="../logo/Lucky-Shrub-logos/Asset 1@3x.png">
 </head>
 
 <body>
@@ -89,7 +89,7 @@
             <input class="input2" type="submit" value="Join">
         </forum>
         <div class="socials">
-            <a href="https://www.remove.bg/fr/upload" target="_blank"><img src="https://cdn.discordapp.com/attachments/941095160517894185/1051868979414700042/Twitter_Icon_Vector_PNG_Images__White_Twitter_Icon_Png__Twitter_Icons__White_Icons__Twitter_Logo_PNG_Image_For_Free_Download-removebg-preview.png" width="35px"></a>
+            <a href="https://www.linkedin.com/in/hicham-zaadla/" target="_blank"><img src="./images/twitter-icon.png" alt="twitter-icon" width="35px"></a>
         </div>
         <p>© 2022 Hicham ZAADLA. All rights reserved.</p>
     </footer>
