--- a/html/Founders.html
+++ b/html/Founders.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/styles4.css">
 
     <title>Garden</title>
-    <link rel="icon" type="image/x-icon" href="./logo/Lucky-Shrub-logos/Asset 1@3x.png">
+    <link rel="icon" type="image/x-icon" href="../logo/Lucky-Shrub-logos/Asset 1@3x.png">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
     <!-- Main  -->
     <main>
         <article class="article-founder">
-            <img src="https://cdn.discordapp.com/attachments/941095160517894185/1106944521473904720/wallpaperflare.com_wallpaper-_2__1.webp" width="100%">
+            <img src="../images/founders/founders.webp" alt="founders" width="100%">
             <p>Lucky Shrub was started by a husband and wife team, Jason and Maria, who share a long-time love for plants. Jason is the garden architect. He creates and oversees all designs while managing his team of landscapers. Maria manages all the marketing
                 for the company and oversees the nursery.<br>Their story is beyound the truth, their first encounter was at Miami restaurent, the two of them didn't have a good day and wanted a cup of tea to releive the stress, but little did they know
                 that sharing the same table and exchanging some words will lead not just to their marriege but also the creationg of this company.<br>Now, they share a one lively house filled with their 3 sons and 4 daughters. These two couple demonstrated
@@ -39,7 +39,7 @@
                 Lucky Shrub-CEO<br>The main purpose of this company is bringing more elegance to the gardening design, in middle era only rich people had opportunity to enjoy it's beauty. It's time to make renovation to that capitalist system and give
                 everyone a chance to enjoy their own gardening, either it was inide a 12 feet apartement or a a backyard's house or even your workplace.<br>Our mission is to bring the world a more opportuniies to enjoy it's beauty without a class hierarchy
                 while respecting the quality of our products and improving them depending on our clients feedbacks.<br>We are delighted to have you reading throw all our message, it means a lo to us, sincerly.</p>
-            <img class="flower" src="https://cdn.discordapp.com/attachments/941095160517894185/1106945248925601803/pngwing.com_1_1.webp">
+            <img class="flower" src="../images/founders/flower.webp" alt="flower">
         </article>
 
     </main>
@@ -52,7 +52,7 @@
             <input class="input2" type="submit" value="Join">
         </forum>
         <div class="socials">
-            <a href="https://www.remove.bg/fr/upload" target="_blank"><img src="https://cdn.discordapp.com/attachments/941095160517894185/1051868979414700042/Twitter_Icon_Vector_PNG_Images__White_Twitter_Icon_Png__Twitter_Icons__White_Icons__Twitter_Logo_PNG_Image_For_Free_Download-removebg-preview.png" width="35px"></a>
+            <a href="https://www.linkedin.com/in/hicham-zaadla/" target="_blank"><img src="../images/twitter-icon.png" alt="twitter-icon" width="35px"></a>
         </div>
         <p>© 2022 Hicham ZAADLA. All rights reserved.</p>
     </footer>
